testFindMultiplOfMinAnMinusNumbers